[gd_scene load_steps=2 format=3 uid="uid://d0j20owmdfkkq"]

[ext_resource type="Script" uid="uid://depkjav3oges7" path="res://skriptit/debug_menu.gd" id="1_1ysre"]

[node name="DebugMenu" type="Control"]
custom_minimum_size = Vector2(200, 350)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_1ysre")

[node name="PanelContainerTP" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 350)
layout_mode = 0
offset_left = 586.0
offset_top = 91.0
offset_right = 786.0
offset_bottom = 441.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainerTP"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainerTP/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainerTP/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="PanelContainerTP/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Tp1"

[node name="Button2" type="Button" parent="PanelContainerTP/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Tp2"

[node name="Button3" type="Button" parent="PanelContainerTP/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Tp3"

[node name="PanelContainerUtil" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_left = 197.0
offset_top = 103.0
offset_right = 415.0
offset_bottom = 194.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainerUtil"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainerUtil/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ButtonKuolema" type="Button" parent="PanelContainerUtil/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Kuolema"

[node name="ButtonLataaScene" type="Button" parent="PanelContainerUtil/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "TODO: Lataa scene"

[connection signal="pressed" from="PanelContainerUtil/MarginContainer/VBoxContainer/ButtonKuolema" to="." method="_on_button_death_pressed"]
[connection signal="pressed" from="PanelContainerUtil/MarginContainer/VBoxContainer/ButtonLataaScene" to="." method="_on_button_reload_scene_pressed"]
